--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
     "@vercel/analytics": "^1.6.1",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.559.0",
     "next": "16.0.8",
+    "nodemailer": "^7.0.11",
     "react": "19.2.1",
     "react-dom": "19.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
